# Ray-Tracing

./: .gitignore  CMakeLists.txt  README.md  Ray-Tracing.sln
Ray-Tracer/: CMakeLists.txt
Ray-Tracer/include/: aabb.hpp  bvh.hpp  camera.hpp  color.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  material.hpp  perlin.hpp  quad.hpp  ray.hpp  rtw_image.hpp  sphere.hpp  texture.hpp  timer.hpp  traingle.hpp  util.hpp  vec3.hpp
Ray-Tracer/src/: aabb.cpp  bvh.cpp  camera.cpp  color.cpp  hittable_list.cpp  interval.cpp  main.cpp  material.cpp  perlin.cpp  quad.cpp  ray.cpp  rtw_image.cpp  sphere.cpp  texture.cpp  util.cpp  vec3.cpp
Ray-Tracing/: Ray-Tracing.vcxproj  Ray-Tracing.vcxproj.filters  image.ppm  main.cpp  stdafx.h
Ray-Tracing/Components/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  Light.cpp  Light.h  Ray.cpp  Ray.h  Renderer.cpp  Renderer.h  Surface.cpp  Surface.h
Ray-Tracing/include/: aabb.hpp  bvh.hpp  camera.hpp  color.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  material.hpp  ray.hpp  sphere.hpp  texture.hpp  timer.hpp  traingle.hpp  util.hpp  vec3.hpp
Ray-Tracing/scenes/: scene-1.json  scene-2.json  scene-3.json
Ray-Tracing/src/: aabb.cpp  camera.cpp  color.cpp  hittable.cpp  hittable_list.cpp  interval.cpp  main.cpp  material.cpp  ray.cpp  util.cpp  vec3.cpp
